fix some gcp bugs